2012-08-02 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Core.java: Changed timeout from 10 to 5 seconds.
	* res/layout/item_list_event_layout.xml: Increased drawablePadding of timestamp textview.

2012-08-01 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Main.java: Changed some buttons.
	* res/layout/options.xml,
	  res/layout/main.xml: UI changes.
	* res/values/strings.xml: Entry changed.

2012-08-01 Santiago Munín <burning1@gmail.com>
	* res/layout/create_incident.xml: UI changes.
	* AndroidManifest.xml: Removed some comments and removed header from all activities.
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: FIXME added.

2012-08-01 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: TODO added.
	* res/layout/options.xml: UI changes.
	* res/values/strings.xml: Changed an entry.

2012-07-30 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java, 
	  src/pandroid_event_viewer/pandorafms/PandroidEventviewerService.java: Changed time measurement in the background check events.
	* res/layout/create_incident.xml: Fixed a edittext's bad behavior (bad stretching).

2012-07-14 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerService.java: Now uses the new getEvents() method in API class.

2012-07-14 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: Now uses the new getEvents() method in API class.
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerService.java: Little changes.
	* src/pandroid_event_viewer/pandorafms/API.java: Now the getEvents() method accepts all parameters of get_events petition in Pandora API.

2012-07-13 Santiago Munín <burning1@gmail.com>
	* ChangeLog: Fixed a line.